--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@ngaox/seo": "^5.0.0",
     "@nguniversal/express-engine": "^16.2.0",
     "compression": "^1.7.4",
