--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -150,6 +150,11 @@ collections:
       - label: 'Description'
         name: 'description'
         widget: 'text'
+      - label: 'YouTube Playlist ID'
+        name: 'youtubePlaylistId'
+        widget: 'string'
+        required: false
+        hint: 'In case you want to attach some videos, create a YouTube Playlist with those videos. Then, click on share button in the playlist. Copy and paste the link, and extract whatever comes as list ID (after the "list" parameter). For instance, a sample link could be "https://youtube.com/playlist?list=PLbAKzQYf5_ME9HVqX2laYHNWCny96L5aI&si=zjfX69n2iqzZeVN4". In there, the playlist ID is "PLbAKzQYf5_ME9HVqX2laYHNWCny96L5aI"'
       - label: 'Credits'
         name: 'credits'
         widget: 'list'
