--- a/.prettierignore
+++ b/.prettierignore
@@ -376,6 +376,14 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/angular,vim,visualstudiocode,node,webstorm+iml,macos,linux,windows,lighthouseci,dotenv
+src/content/*.json
+src/content/**/*-images.json
+src/data/*.json
+src/data/**/*-images.json
+src/data/images/*.json
+routes-file.txt
 # Manual edit
 # - Remove .idea from Angular. We want some IDE settings!
-src/data/**/*.json
+# - Add generated JSON lists
+# - Add generated image lists
+# - Add generated route file
