--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "prebuild": "npm run generate-image-lists && npm run generate-content && npm run generate-routes-file",
     "analyze-main-bundle": "ng build --source-map && npx source-map-explorer dist/chrislb/browser/main.*.js",
     "postbuild": "cp dist/chrislb/browser/404/index.html dist/chrislb/browser/content/404.html",
-    "generate-routes-file": "ts-node scripts/src/generate-routes-file.mts"
+    "generate-routes-file": "ts-node scripts/src/generate-routes-file.mts",
+    "generators": "ts-node scripts/src/generators.mts"
   },
   "private": true,
   "dependencies": {
