feat(cms): try out git gateway

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,6 +1,7 @@
 #local_backend: true
 backend:
-  name: github
+  name: git-gateway
+  #name: github
   repo: davidlj95/chrislb
   branch: main
   # 👇 To be in sync with Cloudflare Pages deploy previews
