feat(cms): revert to github
This reverts commit b9b5a559d3e0987d4c7f324308315fce8e8b9323.

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,7 +1,6 @@
 #local_backend: true
 backend:
-  name: git-gateway
-  #name: github
+  name: github
   repo: davidlj95/chrislb
   branch: main
   # 👇 To be in sync with Cloudflare Pages deploy previews
