refactor: use lodash for isEmpty/Undefined

--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@ngaox/seo": "^5.0.0",
     "@nguniversal/express-engine": "^16.2.0",
+    "@types/lodash-es": "^4.17.11",
     "@unpic/core": "^0.0.35",
     "compression": "^1.7.4",
     "express": "^4.15.2",
     "gardevoir": "^1.0.0",
+    "lodash-es": "^4.17.21",
     "rxjs": "~7.8.0",
     "swiper": "^11.0.3",
     "tslib": "^2.3.0",
