--- a/package.json
+++ b/package.json
@@ -15,18 +15,23 @@
     "lint": "ng lint",
     "format-check": "prettier --check",
     "format-check-all": "npm run format-check -- .",
+    "bun:format-check-all": "bun run format-check -- .",
     "format": "prettier --ignore-unknown --write",
     "format-all": "npm run format -- .",
+    "bun:format-all": "bun run format -- .",
     "create-env-from-sample": "cp .env.sample .env",
     "lint-staged": "lint-staged",
     "git-hooks": "husky install",
     "generate-prettierignore": "cp .gitignore .prettierignore && cat .part.prettierignore >> .prettierignore",
     "cms-server": "npx decap-server",
     "prebuild": "npm run generate",
+    "bun:prebuild": "bun run bun:generate",
     "analyze-main-bundle": "ng build --source-map && npx source-map-explorer dist/chrislb/browser/main.*.js",
     "postbuild": "cp dist/chrislb/browser/404/index.html dist/chrislb/browser/content/404.html",
-    "generate": "ts-node scripts/src/generators.mts",
-    "generate-routes-file": "ts-node scripts/src/routes-file-generator.mts"
+    "bun:generate": "bun run scripts/src/generators.mts",
+    "bun:generate-routes-file": "bun run scripts/src/routes-file-generator.mts.mts",
+    "generate": "NODE_OPTIONS='--experimental-specifier-resolution=node' ts-node scripts/src/generators.mts",
+    "generate-routes-file": "NODE_OPTIONS='--experimental-specifier-resolution=node' ts-node scripts/src/routes-file-generator.mts"
   },
   "private": true,
   "dependencies": {
