--- a/package.json
+++ b/package.json
@@ -24,14 +24,18 @@
     "git-hooks": "husky install",
     "generate-prettierignore": "cp .gitignore .prettierignore && cat .part.prettierignore >> .prettierignore",
     "cms-server": "npx decap-server",
-    "prebuild": "npm run generate",
-    "bun:prebuild": "bun run bun:generate",
+    "prebuild": "npm run generate-all",
+    "bun:prebuild": "bun run bun:generate-all",
     "analyze-main-bundle": "ng build --source-map && npx source-map-explorer dist/chrislb/browser/main.*.js",
     "postbuild": "cp dist/chrislb/browser/404/index.html dist/chrislb/browser/content/404.html",
-    "bun:generate": "bun run scripts/src/generators.mts",
+    "bun:generate-all": "bun run scripts/src/generators/all-generators.mts",
+    "bun:generate-images-lists": "bun run scripts/src/generators/images-lists-generators.mts",
+    "bun:generate-contents": "bun run scripts/src/generators/content-generators.mts",
     "bun:generate-routes-file": "bun run scripts/src/routes-file-generator.mts.mts",
-    "generate": "NODE_OPTIONS='--experimental-specifier-resolution=node' ts-node scripts/src/generators.mts",
-    "generate-routes-file": "NODE_OPTIONS='--experimental-specifier-resolution=node' ts-node scripts/src/routes-file-generator.mts"
+    "generate-all": "NODE_OPTIONS='--experimental-specifier-resolution=node' ts-node scripts/src/generators/all-generators.mts",
+    "generate-images-lists": "NODE_OPTIONS='--experimental-specifier-resolution=node' ts-node scripts/src/generators/images-lists-generators.mts",
+    "generate-contents": "NODE_OPTIONS='--experimental-specifier-resolution=node' ts-node scripts/src/generators/content-generators.mts",
+    "generate-routes-file": "NODE_OPTIONS='--experimental-specifier-resolution=node' ts-node scripts/src/generators/routes-file-generator.mts"
   },
   "private": true,
   "dependencies": {
