--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,10 +1,19 @@
-/* Dedicated to run several dev scripts with ts-node */
+/* Dedicated to run several dev scripts */
 {
-  "extends": "@tsconfig/node16/tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist",
+    // -- Base configs (based upon `tsc --init`)
+    //👇 Won't be emitted anyway
+    "target": "esnext",
     //👇 So we can use "bundler" resolution
     "module": "esnext",
+    //👇 Not needed :)
+    "esModuleInterop": false,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    // -- Our configs
+    "lib": ["esnext"],
+    "outDir": "dist",
     //👇 So we can use imports without extension with ESM
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
