build(deps): update Angular to v17

--- a/angular.json
+++ b/angular.json
@@ -95,10 +95,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "chrislb:build:production"
+              "buildTarget": "chrislb:build:production"
             },
             "development": {
-              "browserTarget": "chrislb:build:development"
+              "buildTarget": "chrislb:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -106,7 +106,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "chrislb:build"
+            "buildTarget": "chrislb:build"
           }
         },
         "test": {
@@ -168,7 +168,7 @@
           "defaultConfiguration": "production"
         },
         "serve-ssr": {
-          "builder": "@nguniversal/builders:ssr-dev-server",
+          "builder": "@angular-devkit/build-angular:ssr-dev-server",
           "configurations": {
             "development": {
               "browserTarget": "chrislb:build:development",
@@ -182,7 +182,7 @@
           "defaultConfiguration": "development"
         },
         "prerender": {
-          "builder": "@nguniversal/builders:prerender",
+          "builder": "@angular-devkit/build-angular:prerender",
           "options": {
             "routes": ["/"]
           },
