--- a/package.json
+++ b/package.json
@@ -41,22 +41,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "16.2.12",
-    "@angular/common": "16.2.12",
-    "@angular/compiler": "16.2.12",
-    "@angular/core": "16.2.12",
-    "@angular/forms": "16.2.12",
-    "@angular/platform-browser": "16.2.12",
-    "@angular/platform-browser-dynamic": "16.2.12",
-    "@angular/platform-server": "16.2.12",
-    "@angular/router": "16.2.12",
+    "@angular/animations": "17.0.2",
+    "@angular/common": "17.0.2",
+    "@angular/compiler": "17.0.2",
+    "@angular/core": "17.0.2",
+    "@angular/forms": "17.0.2",
+    "@angular/platform-browser": "17.0.2",
+    "@angular/platform-browser-dynamic": "17.0.2",
+    "@angular/platform-server": "17.0.2",
+    "@angular/router": "17.0.2",
+    "@angular/ssr": "^17.0.0",
     "@fontsource/fira-sans": "5.0.17",
     "@fortawesome/angular-fontawesome": "0.14.0",
     "@fortawesome/fontawesome-svg-core": "6.4.2",
     "@fortawesome/free-brands-svg-icons": "6.4.2",
     "@fortawesome/free-solid-svg-icons": "6.4.2",
     "@ngaox/seo": "5.0.0",
-    "@nguniversal/express-engine": "16.2.0",
     "@types/lodash-es": "4.17.11",
     "@unpic/core": "0.0.36",
     "compression": "1.7.4",
@@ -69,16 +69,15 @@
     "zone.js": "0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.2.10",
+    "@angular-devkit/build-angular": "17.0.0",
     "@angular-eslint/builder": "16.3.1",
     "@angular-eslint/eslint-plugin": "16.3.1",
     "@angular-eslint/eslint-plugin-template": "16.3.1",
     "@angular-eslint/schematics": "16.3.1",
     "@angular-eslint/template-parser": "16.3.1",
-    "@angular/cli": "16.2.10",
-    "@angular/compiler-cli": "16.2.12",
+    "@angular/cli": "17.0.0",
+    "@angular/compiler-cli": "17.0.2",
     "@lhci/cli": "0.12.0",
-    "@nguniversal/builders": "16.2.0",
     "@types/compression": "1.7.5",
     "@types/express": "4.17.21",
     "@types/jasmine": "5.1.2",
@@ -100,6 +99,6 @@
     "ng-mocks": "14.11.0",
     "prettier": "3.0.3",
     "ts-node": "10.9.1",
-    "typescript": "5.1.6"
+    "typescript": "5.2.2"
   }
 }
