--- a/package.json
+++ b/package.json
@@ -50,12 +50,12 @@
     "@angular/platform-browser-dynamic": "16.2.12",
     "@angular/platform-server": "16.2.12",
     "@angular/router": "16.2.12",
+    "@davidlj95/ngx-meta": "^1.0.0-alpha.10",
     "@fontsource/fira-sans": "5.0.18",
     "@fortawesome/angular-fontawesome": "0.14.0",
     "@fortawesome/fontawesome-svg-core": "6.5.1",
     "@fortawesome/free-brands-svg-icons": "6.5.1",
     "@fortawesome/free-solid-svg-icons": "6.5.1",
-    "@ngaox/seo": "5.0.0",
     "@nguniversal/express-engine": "16.2.0",
     "@types/lodash-es": "4.17.12",
     "@unpic/core": "0.0.42",
