--- a/renovate.json5
+++ b/renovate.json5
@@ -56,5 +56,11 @@
       matchPackageNames: ['typescript'],
       allowedVersions: '>=4.9.3 <5.2.0',
     },
+    // ts-node doesn't support Node 20 with ESM
+    // https://github.com/TypeStrong/ts-node/issues/1997
+    {
+      matchPackageNames: ['node'],
+      allowedVersions: '18.x',
+    },
   ],
 }
