--- a/renovate.json5
+++ b/renovate.json5
@@ -40,7 +40,7 @@
       matchCategories: ['node'],
       addLabels: ['node'],
     },
-    // Automerge minor/patch production ones & dev dependencies
+    // Auto-merge minor/patch production ones & dev dependencies
     {
       matchUpdateTypes: ['minor', 'patch', 'pin', 'digest'],
       automerge: true,
@@ -49,24 +49,35 @@
       matchDepTypes: ['devDependencies'],
       automerge: true,
     },
-    // We cannot upgrade to latest Typescript until Angular supports it
-    // Otherwise, we'll get an error
+    // Angular v16.1.x || v16.2.x compatibilities
     // https://angular.io/guide/versions
+    // https://update.angular.io/?v=15.0-16.0 (zone.js)
+    {
+      matchPackagePrefixes: ['@angular'],
+      allowedVersions: '^16',
+    },
+    //👇 N/A. Just to have this info somewhere near
+    {
+      matchPackageNames: ['node', '@types/node'],
+      allowedVersions: '^16.14.0 || ^18.10.0',
+    },
     {
       matchPackageNames: ['typescript'],
       allowedVersions: '>=4.9.3 <5.2.0',
     },
-    // ts-node doesn't support Node 20 with ESM
-    // https://github.com/TypeStrong/ts-node/issues/1997
     {
-      matchPackageNames: ['node'],
-      allowedVersions: '18.x',
+      matchPackageNames: ['rxjs'],
+      allowedVersions: '^6.5.3 || ^7.4.0',
     },
-    // Compatibility with Angular v16
+    {
+      matchPackageNames: ['zone.js'],
+      allowedVersions: '0.13.x',
+    },
+    // Font Awesome & Angular v16
     // https://github.com/FortAwesome/angular-fontawesome#compatibility-table
     {
       matchPackageNames: ['@fortawesome/angular-fontawesome'],
-      allowedVersions: '0.14.x',
+      allowedVersions: '0.13.x',
     },
     {
       matchPackageNames: [
