chore: replace npm run with pnpm run

--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "prerender": "ng run chrislb:prerender --routes-file routes-file.txt",
     "lint": "ng lint",
     "format-check": "prettier --check",
-    "format-check-all": "npm run format-check -- .",
+    "format-check-all": "pnpm run format-check -- .",
     "format": "prettier --ignore-unknown --write",
-    "format-all": "npm run format -- .",
+    "format-all": "pnpm run format -- .",
     "create-env-from-sample": "cp .env.sample .env",
     "lint-staged": "lint-staged",
     "git-hooks": "husky install",
     "generate-prettierignore": "cp .gitignore .prettierignore && cat .part.prettierignore >> .prettierignore",
     "cms-server": "npx decap-server",
-    "prebuild": "npm run generate-all",
+    "prebuild": "pnpm run generate-all",
     "analyze-main-bundle": "ng build --source-map && npx source-map-explorer dist/chrislb/browser/main.*.js",
     "postbuild": "cp dist/chrislb/browser/404/index.html dist/chrislb/browser/content/404.html",
     "generate-all": "tsm scripts/src/generators/all-generators.ts",
