build: configure Angular CLI to use pnpm

--- a/angular.json
+++ b/angular.json
@@ -209,6 +209,7 @@
   },
   "cli": {
     "analytics": false,
+    "packageManager": "pnpm",
     "schematicCollections": ["@angular-eslint/schematics"]
   }
 }
