build: switch from bun to pnpm (#279)
Was interesting, but I prefer working software

`bun` made the build break in https://github.com/davidlj95/chrislb/pull/278#issuecomment-1913710987

TBH don't why appeared there, as nothing build-related is changed.

--- a/package.json
+++ b/package.json
@@ -14,31 +14,25 @@
     "prerender": "ng run chrislb:prerender --routes-file routes-file.txt",
     "lint": "ng lint",
     "format-check": "prettier --check",
-    "format-check-all": "npm run format-check -- .",
-    "bun:format-check-all": "bun run format-check -- .",
+    "format-check-all": "pnpm run format-check -- .",
     "format": "prettier --ignore-unknown --write",
-    "format-all": "npm run format -- .",
-    "bun:format-all": "bun run format -- .",
+    "format-all": "pnpm run format -- .",
     "create-env-from-sample": "cp .env.sample .env",
     "lint-staged": "lint-staged",
     "git-hooks": "husky install",
     "generate-prettierignore": "cp .gitignore .prettierignore && cat .part.prettierignore >> .prettierignore",
     "cms-server": "npx decap-server",
-    "prebuild": "npm run generate-all",
-    "bun:prebuild": "bun run bun:generate-all",
+    "prebuild": "pnpm run generate-all",
     "analyze-main-bundle": "ng build --source-map && npx source-map-explorer dist/chrislb/browser/main.*.js",
     "postbuild": "cp dist/chrislb/browser/404/index.html dist/chrislb/browser/content/404.html",
-    "bun:generate-all": "bun run scripts/src/generators/all-generators.ts",
-    "bun:generate-images-lists": "bun run scripts/src/generators/images-lists-generators.ts",
-    "bun:generate-contents": "bun run scripts/src/generators/content-generators.ts",
-    "bun:generate-routes-file": "bun run scripts/src/generators/routes-file-generator.ts",
-    "generate-all": "NODE_OPTIONS='--experimental-specifier-resolution=node' ts-node scripts/src/generators/all-generators.ts",
-    "generate-images-lists": "NODE_OPTIONS='--experimental-specifier-resolution=node' ts-node scripts/src/generators/images-lists-generators.ts",
-    "generate-contents": "NODE_OPTIONS='--experimental-specifier-resolution=node' ts-node scripts/src/generators/content-generators.ts",
-    "generate-routes-file": "NODE_OPTIONS='--experimental-specifier-resolution=node' ts-node scripts/src/generators/routes-file-generator.ts",
+    "generate-all": "tsm scripts/src/generators/all-generators.ts",
+    "generate-images-lists": "tsm scripts/src/generators/images-lists-generators.ts",
+    "generate-contents": "tsm scripts/src/generators/content-generators.ts",
+    "generate-routes-file": "tsm scripts/src/generators/routes-file-generator.ts",
     "validate-renovate-config": "npx -p renovate renovate-config-validator",
     "lighthouse": "npx @lhci/cli autorun"
   },
+  "packageManager": "pnpm@8.15.0",
   "private": true,
   "dependencies": {
     "@angular/animations": "16.2.12",
@@ -99,7 +93,7 @@
     "lint-staged": "15.2.0",
     "ng-mocks": "14.12.1",
     "prettier": "3.1.1",
-    "ts-node": "10.9.2",
+    "tsm": "2.3.0",
     "typescript": "5.1.6"
   }
 }
