--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@angular/platform-browser-dynamic": "17.2.4",
     "@angular/platform-server": "17.2.4",
     "@angular/router": "17.2.4",
-    "@angular/ssr": "^17.2.3",
+    "@angular/ssr": "17.2.3",
     "@davidlj95/ngx-meta": "1.0.0-alpha.47",
     "@fontsource/fira-sans": "5.0.19",
     "@fortawesome/angular-fontawesome": "0.14.1",
@@ -75,11 +75,11 @@
     "@types/express": "4.17.21",
     "@types/jasmine": "5.1.4",
     "@types/node": "20.10.8",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "browser-sync": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "7.1.1",
+    "@typescript-eslint/parser": "7.1.1",
+    "browser-sync": "3.0.2",
     "dotenv": "16.4.5",
-    "eslint": "^8.53.0",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "husky": "9.0.11",
     "imagekit": "5.0.0",
