--- a/package.json
+++ b/package.json
@@ -34,22 +34,22 @@
   "packageManager": "pnpm@8.15.4",
   "private": true,
   "dependencies": {
-    "@angular/animations": "16.2.12",
-    "@angular/common": "16.2.12",
-    "@angular/compiler": "16.2.12",
-    "@angular/core": "16.2.12",
-    "@angular/forms": "16.2.12",
-    "@angular/platform-browser": "16.2.12",
-    "@angular/platform-browser-dynamic": "16.2.12",
-    "@angular/platform-server": "16.2.12",
-    "@angular/router": "16.2.12",
+    "@angular/animations": "17.2.4",
+    "@angular/common": "17.2.4",
+    "@angular/compiler": "17.2.4",
+    "@angular/core": "17.2.4",
+    "@angular/forms": "17.2.4",
+    "@angular/platform-browser": "17.2.4",
+    "@angular/platform-browser-dynamic": "17.2.4",
+    "@angular/platform-server": "17.2.4",
+    "@angular/router": "17.2.4",
+    "@angular/ssr": "17.2.3",
     "@davidlj95/ngx-meta": "1.0.0-alpha.47",
     "@fontsource/fira-sans": "5.0.19",
-    "@fortawesome/angular-fontawesome": "0.13.0",
+    "@fortawesome/angular-fontawesome": "0.14.1",
     "@fortawesome/fontawesome-svg-core": "6.5.1",
     "@fortawesome/free-brands-svg-icons": "6.5.1",
     "@fortawesome/free-solid-svg-icons": "6.5.1",
-    "@nguniversal/express-engine": "16.2.0",
     "@types/lodash-es": "4.17.12",
     "@unpic/core": "0.0.47",
     "compression": "1.7.4",
@@ -59,25 +59,25 @@
     "rxjs": "7.8.1",
     "swiper": "11.0.7",
     "tslib": "2.6.2",
-    "zone.js": "0.13.3"
+    "zone.js": "0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.2.12",
-    "@angular-eslint/builder": "16.3.1",
-    "@angular-eslint/eslint-plugin": "16.3.1",
-    "@angular-eslint/eslint-plugin-template": "16.3.1",
-    "@angular-eslint/schematics": "16.3.1",
-    "@angular-eslint/template-parser": "16.3.1",
-    "@angular/cli": "16.2.12",
-    "@angular/compiler-cli": "16.2.12",
+    "@angular-devkit/build-angular": "17.2.3",
+    "@angular-eslint/builder": "17.2.1",
+    "@angular-eslint/eslint-plugin": "17.2.1",
+    "@angular-eslint/eslint-plugin-template": "17.2.1",
+    "@angular-eslint/schematics": "17.2.1",
+    "@angular-eslint/template-parser": "17.2.1",
+    "@angular/cli": "17.2.3",
+    "@angular/compiler-cli": "17.2.4",
     "@lhci/cli": "0.12.0",
-    "@nguniversal/builders": "16.2.0",
     "@types/compression": "1.7.5",
     "@types/express": "4.17.21",
     "@types/jasmine": "5.1.4",
     "@types/node": "20.10.8",
     "@typescript-eslint/eslint-plugin": "7.1.1",
     "@typescript-eslint/parser": "7.1.1",
+    "browser-sync": "3.0.2",
     "dotenv": "16.4.5",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
@@ -93,6 +93,6 @@
     "ng-mocks": "14.12.1",
     "prettier": "3.2.5",
     "tsm": "2.3.0",
-    "typescript": "5.1.6"
+    "typescript": "5.3.3"
   }
 }
