--- a/.github/workflows/reusable-performance.yml
+++ b/.github/workflows/reusable-performance.yml
@@ -21,7 +21,7 @@ on:
 
 jobs:
   lhci:
-    name: Lighthouse
+    name: Lighthouse CI
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
@@ -43,4 +43,4 @@ jobs:
           # Needed for status checks to appear on PR
           # https://github.com/GoogleChrome/lighthouse-ci/issues/859#issuecomment-1574205125
           LHCI_BUILD_CONTEXT__CURRENT_HASH: ${{ github.event.pull_request.head.sha || github.sha }}
-        run: cd .ci && make lighthouse
+        run: pnpm run lighthouse-ci
