--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "generate-contents": "tsm scripts/src/generators/content-generators.ts",
     "generate-routes-file": "tsm scripts/src/generators/routes-file-generator.ts",
     "validate-renovate-config": "npx -p renovate renovate-config-validator",
-    "lighthouse": "npx @lhci/cli autorun"
+    "lighthouse-ci": "npx @lhci/cli autorun"
   },
   "packageManager": "pnpm@9.4.0",
   "private": true,
