chore: remove & re"format" format tasks

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "build:ssr": "ng build && ng run chrislb:server",
     "prerender": "ng run chrislb:prerender --routes-file routes-file.txt",
     "lint": "ng lint",
-    "format-check": "prettier --check",
-    "format-check-all": "pnpm run format-check -- .",
+    "format:check": "prettier --check",
+    "format:check:all": "pnpm run format:check -- .",
     "format": "prettier --ignore-unknown --write",
-    "format-all": "pnpm run format -- .",
+    "format:all": "pnpm run format -- .",
     "create-env-from-sample": "cp .env.sample .env",
     "lint-staged": "lint-staged",
     "git-hooks": "husky",
