--- a/.github/workflows/reusable-style.yml
+++ b/.github/workflows/reusable-style.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Setup
         uses: ./.github/actions/setup
       - name: Format check
-        run: cd .ci && make format-check
+        run: pnpm run format:check:all
