--- a/package.json
+++ b/package.json
@@ -8,10 +8,6 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "dev:ssr": "ng run chrislb:serve-ssr",
-    "serve:ssr": "node dist/chrislb/server/main.js",
-    "build:ssr": "ng build && ng run chrislb:server",
-    "prerender": "ng run chrislb:prerender --routes-file routes-file.txt",
     "lint": "ng lint",
     "format:check": "prettier --check",
     "format:check:all": "pnpm run format:check -- .",
@@ -29,7 +25,8 @@
     "generate-contents": "tsm scripts/src/generators/content-generators.ts",
     "generate-routes-file": "tsm scripts/src/generators/routes-file-generator.ts",
     "validate-renovate-config": "npx -p renovate renovate-config-validator",
-    "lighthouse-ci": "npx @lhci/cli autorun"
+    "lighthouse-ci": "npx @lhci/cli autorun",
+    "serve:ssr:chrislb": "node dist/chrislb/server/server.mjs"
   },
   "packageManager": "pnpm@9.4.0",
   "private": true,
@@ -43,7 +40,7 @@
     "@angular/platform-browser-dynamic": "18.0.4",
     "@angular/platform-server": "18.0.4",
     "@angular/router": "18.0.4",
-    "@angular/ssr": "18.0.5",
+    "@angular/ssr": "^18.0.5",
     "@davidlj95/ngx-meta": "1.0.0-beta.4",
     "@fontsource/fira-sans": "5.0.20",
     "@fortawesome/angular-fontawesome": "0.15.0",
@@ -53,7 +50,7 @@
     "@types/lodash-es": "4.17.12",
     "@unpic/core": "0.0.49",
     "compression": "1.7.4",
-    "express": "4.19.2",
+    "express": "^4.18.2",
     "gardevoir": "1.0.0",
     "lodash-es": "4.17.21",
     "rxjs": "7.8.1",
@@ -72,7 +69,7 @@
     "@angular/compiler-cli": "18.0.4",
     "@lhci/cli": "0.14.0",
     "@types/compression": "1.7.5",
-    "@types/express": "4.17.21",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "5.1.4",
     "@types/node": "20.14.8",
     "@typescript-eslint/eslint-plugin": "7.11.0",
