--- a/angular.json
+++ b/angular.json
@@ -66,10 +66,10 @@
             "scripts": [],
             "browser": "src/main.ts",
             "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            }
+            "prerender": {
+              "routesFile": "routes-file.txt"
+            },
+            "ssr": false
           },
           "configurations": {
             "production": {
