--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@angular/platform-browser-dynamic": "18.0.4",
     "@angular/platform-server": "18.0.4",
     "@angular/router": "18.0.4",
-    "@angular/ssr": "^18.0.5",
+    "@angular/ssr": "18.0.5",
     "@davidlj95/ngx-meta": "1.0.0-beta.4",
     "@fontsource/fira-sans": "5.0.20",
     "@fortawesome/angular-fontawesome": "0.15.0",
@@ -49,7 +49,7 @@
     "@types/lodash-es": "4.17.12",
     "@unpic/core": "0.0.49",
     "compression": "1.7.4",
-    "express": "^4.18.2",
+    "express": "4.19.2",
     "gardevoir": "1.0.0",
     "lodash-es": "4.17.21",
     "rxjs": "7.8.1",
@@ -68,7 +68,7 @@
     "@angular/compiler-cli": "18.0.4",
     "@lhci/cli": "0.14.0",
     "@types/compression": "1.7.5",
-    "@types/express": "^4.17.17",
+    "@types/express": "4.17.21",
     "@types/jasmine": "5.1.4",
     "@types/node": "20.14.8",
     "@typescript-eslint/eslint-plugin": "7.11.0",
